--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -145,7 +145,7 @@
                             </div>
                         </div>
                         <div class="item-controls">
-                            <a class="item-control item-toggle {{item.data.toggleClass}}" title='{{item.data.toggleTitle}}'><i class="fas fa-shield-alt"></i></a>
+                            <a class="item-control item-toggle {{data.equippedArmor.data.toggleClass}}" title='{{data.equippedArmor.data.toggleTitle}}'><i class="fas fa-shield-alt"></i></a>
                             <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                             <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
                         </div>
