--- a/templates/item-sheet.html
+++ b/templates/item-sheet.html
@@ -25,7 +25,7 @@
 
             {{!-- Price --}}
             <div class="form-group">
-                <label>{{ localize "MB.ItemPrice" }}</label>
+                <label>{{ localize "MB.ItemPrice" }}:</label>
                 <input type="text" name="data.price" value="{{data.price}}" placeholder="2" data-dtype="Number" />
             </div> 
         </div>
