--- a/templates/armor-sheet.html
+++ b/templates/armor-sheet.html
@@ -3,12 +3,10 @@
     {{!-- Item Sheet Header --}}
     <header class="sheet-header flexrow">
         <img class="profile-img" src="{{item.img}}" title="{{item.name}}" data-edit="img"/>
-
-        <div class="header-details flexrow">
-            <h1 class="charname">
+        <div class="header-details">
+            <h1 class="item-name">
                 <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'MB.ItemName' }}"/>
             </h1>
-
             <div class="item-subtitle">
                 <h4 class="item-type">{{item.type}}</h4>
             </div>
@@ -32,13 +30,13 @@
         <div class="tab" data-group="primary" data-tab="details">
             {{!-- Price --}}
             <div class="form-group">
-                <label>{{ localize "MB.ItemPrice" }}</label>
+                <label>{{ localize "MB.ItemPrice" }}:</label>
                 <input type="text" name="data.price" value="{{data.price}}" placeholder="2" data-dtype="Number" />
             </div> 
 
             {{!-- Armor Current Tier --}}
             <div class="form-group">
-                <label>{{ localize "MB.CurrentTier" }}</label>
+                <label>{{ localize "MB.CurrentTier" }}:</label>
                 <select name="data.currentTier">
                     {{#select data.currentTier}}
                         {{#each config.armorTiers as |name tier|}}
@@ -50,7 +48,7 @@
 
             {{!-- Armor Max Tier --}}
             <div class="form-group">
-                <label>{{ localize "MB.MaxTier" }}</label>
+                <label>{{ localize "MB.MaxTier" }}:</label>
                 <select name="data.maxTier">
                     {{#select data.maxTier}}
                         {{#each config.armorTiers as |name tier|}}
