--- a/templates/misc-sheet.html
+++ b/templates/misc-sheet.html
@@ -1,9 +1,15 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
 
-    <header class="sheet-header">
-        <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
-        <div class="header-fields">
-            <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'MB.ItemName' }}" /></h1>
+    {{!-- Item Sheet Header --}}
+    <header class="sheet-header flexrow">
+        <img class="profile-img" src="{{item.img}}" title="{{item.name}}" data-edit="img"/>
+        <div class="header-details">
+            <h1 class="item-name">
+                <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'MB.ItemName' }}"/>
+            </h1>
+            <div class="item-subtitle">
+                <h4 class="item-type">{{item.type}}</h4>
+            </div>
         </div>
     </header>
 
@@ -25,7 +31,7 @@
 
             {{!-- Price --}}
             <div class="form-group">
-                <label>{{ localize "MB.ItemPrice" }}</label>
+                <label>{{ localize "MB.ItemPrice" }}:</label>
                 <input type="text" name="data.price" value="{{data.price}}" placeholder="2" data-dtype="Number" />
             </div> 
         </div>
