--- a/templates/scroll-sheet.html
+++ b/templates/scroll-sheet.html
@@ -3,12 +3,10 @@
     {{!-- Item Sheet Header --}}
     <header class="sheet-header flexrow">
         <img class="profile-img" src="{{item.img}}" title="{{item.name}}" data-edit="img"/>
-
-        <div class="header-details flexrow">
-            <h1 class="charname">
+        <div class="header-details">
+            <h1 class="item-name">
                 <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'MB.ItemName' }}"/>
             </h1>
-
             <div class="item-subtitle">
                 <h4 class="item-type">{{item.type}}</h4>
             </div>
@@ -33,13 +31,13 @@
 
             {{!-- Price --}}
             <div class="form-group">
-                <label>{{ localize "MB.ItemPrice" }}</label>
+                <label>{{ localize "MB.ItemPrice" }}:</label>
                 <input type="text" name="data.price" value="{{data.price}}" placeholder="2" data-dtype="Number" />
             </div> 
 
             {{!-- Scroll type --}}
             <div class="form-group">
-                <label>{{ localize "MB.ItemScrollType" }}</label>
+                <label>{{ localize "MB.ItemScrollType" }}:</label>
                 <select name="data.scrollType">
                     {{#select data.scrollType}}
                     {{#each config.scrollTypes as |name value|}}
