--- a/templates/weapon-sheet.html
+++ b/templates/weapon-sheet.html
@@ -3,12 +3,10 @@
     {{!-- Item Sheet Header --}}
     <header class="sheet-header flexrow">
         <img class="profile-img" src="{{item.img}}" title="{{item.name}}" data-edit="img"/>
-
-        <div class="header-details flexrow">
-            <h1 class="charname">
+        <div class="header-details">
+            <h1 class="item-name">
                 <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'MB.ItemName' }}"/>
             </h1>
-
             <div class="item-subtitle">
                 <h4 class="item-type">{{item.type}}</h4>
             </div>
@@ -32,13 +30,13 @@
         <div class="tab" data-group="primary" data-tab="details">
             {{!-- Price --}}
             <div class="form-group">
-                <label>{{ localize "MB.ItemPrice" }}</label>
+                <label>{{ localize "MB.ItemPrice" }}:</label>
                 <input type="text" name="data.price" value="{{data.price}}" placeholder="2" data-dtype="Number" />
             </div> 
             
             {{!-- Weapon Type --}}
             <div class="form-group">
-                <label>{{ localize "MB.ItemWeaponType" }}</label>
+                <label>{{ localize "MB.ItemWeaponType" }}:</label>
                 <select name="data.weaponType">
                     {{#select data.weaponType}}
                     {{#each config.weaponTypes as |name type|}}
@@ -50,13 +48,13 @@
 
             {{!-- Damage Die --}}
             <div class="form-group">
-                <label>{{ localize "MB.ItemDamageDie" }}</label>
+                <label>{{ localize "MB.ItemDamageDie" }}:</label>
                 <input type="text" name="data.damageDie" value="{{data.damageDie}}" placeholder="1d4" data-dtype="String" />
             </div>
 
             {{!-- Handed --}}
             <div class="form-group">
-                <label>{{ localize "MB.ItemHanded" }}</label>
+                <label>{{ localize "MB.ItemHanded" }}:</label>
                 <select name="data.handed">
                     {{#select data.handed}}
                     {{#each config.handed as |name value|}}
