--- a/templates/creature-sheet.html
+++ b/templates/creature-sheet.html
@@ -1,71 +1,76 @@
 <form class="{{cssClass}} flexcol" autocomplete="off">
-    {{!-- Sheet Header --}}
+    {{!-- Creature Sheet Header --}}
     <header class="sheet-header flexrow">
-        <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}"/>
-        <section class="header-details flexrow">
-            <h1 class="charname">
+        <div class="header-col1">
+            <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}"/>
+        </div>
+        <div class="header-gutter-col">
+        </div>
+        <div class="header-col2">
+            <h1 class="creature-name">
                 <input name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'MB.Name' }}"/>
             </h1>
-            {{!-- Resources --}}
-            <ul class="resources flexrow">
-                {{!-- hit points --}}
-                <li class="resource">
-                    <h4 class="resource-name box-title">{{ localize "MB.HitPoints" }}</h4>
-                    <div class="resource-value multiple">
-                        <input name="data.hp.current" type="text" value="{{data.hp.current}}" placeholder="10" data-dtype="Number"/>
-                        <span class="sep"> / </span>
-                        <input name="data.hp.max" type="text" value="{{data.hp.max}}" placeholder="10" data-dtype="Number"/>
-                    </div>
-                    <footer class="resource-footer">
-                        <span>{{ localize "MB.Current"}} / {{ localize "MB.Max"}}</span>
-                    </footer>                    
-                </li>
-            </ul>
-        </section>        
+            <div class="hitpoints-row">
+                <span class="stat-label">{{ localize "MB.HitPoints" }}:</span>
+                <input class="stat-input" name="data.hp.current" type="number" value="{{data.hp.current}}" data-dtype="Number"/>
+                /
+                <input class="stat-input" name="data.hp.max" type="number" value="{{data.hp.max}}" data-dtype="Number"/>
+            </div>
+        </div>
     </header>
 
-    {{!-- Sheet Body --}}
+
+    {{!-- Creature Sheet Tab Navigation --}}
+    <nav class="sheet-tabs tabs" data-group="primary">
+        <a class="item" data-tab="description">{{ localize "MB.Description" }}</a>
+        <a class="item" data-tab="details">{{ localize "MB.Details" }}</a>
+    </nav>
+
+    {{!-- Creature Sheet Body --}}
     <section class="sheet-body">
-        {{!-- Morale --}}
-        <div class="form-group">
-            <label>{{ localize "MB.Morale" }}</label>
-            <input name="data.morale" type="text" value="{{data.morale}}" placeholder="10" data-dtype="Number"/>
-        </div>
-
-        {{!-- Armor --}}
-        <div class="form-group">
-            <label>{{ localize "MB.Armor" }}</label>
-            <input type="text" name="data.armor.name" value="{{data.armor.name}}" placeholder="None" data-dtype="String" />
-        </div>
-        <div class="form-group">
-            <label>{{ localize "MB.DamageReductionDie" }}</label>
-            <input type="text" name="data.armor.damageReductionDie" value="{{data.armor.dataReductionDie}}" placeholder="d4" data-dtype="String" />
-        </div> 
-
-        {{!-- Attack --}}
-        <div class="form-group">
-            <label>{{ localize "MB.Attack" }}</label>
-            <input type="text" name="data.attack.name" value="{{data.attack.name}}" placeholder="None" data-dtype="String" />
-        </div> 
-        <div class="form-group">
-            <label>{{ localize "MB.DamageDie" }}</label>
-            <input type="text" name="data.attack.damageDie" value="{{data.attack.damageDie}}" placeholder="d4" data-dtype="String" />
-        </div>
-        <div class="form-group">
-            <label>{{ localize "MB.Special" }}</label>
-            <input type="text" name="data.special" value="{{data.special}}" placeholder="None" data-dtype="String" />
-        </div>
-
-        {{!-- Bounty --}}
-        <div class="form-group">
-            <label>{{ localize "MB.Bounty" }}</label>
-            <input type="text" name="data.bounty" value="{{data.bounty}}" placeholder="None" data-dtype="String" />
-        </div>
-
-        {{!-- Description --}}
-        <div class="description">
-            <label>{{ localize "MB.Description" }}</label>
+        {{!-- Description Tab --}}
+        <div class="tab" data-group="primary" data-tab="description">
             {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+        </div>
+
+        {{!-- Details Tab --}}
+        <div class="tab" data-group="primary" data-tab="details">
+
+            {{!-- Morale --}}
+            <div class="form-group">
+                <label>{{ localize "MB.Morale" }}</label>
+                <input name="data.morale" type="text" value="{{data.morale}}" placeholder="10" data-dtype="Number"/>
+            </div>
+
+            {{!-- Armor --}}
+            <div class="form-group">
+                <label>{{ localize "MB.Armor" }}</label>
+                <input type="text" name="data.armor.name" value="{{data.armor.name}}" placeholder="None" data-dtype="String" />
+            </div>
+            <div class="form-group">
+                <label>{{ localize "MB.DamageReductionDie" }}</label>
+                <input type="text" name="data.armor.damageReductionDie" value="{{data.armor.dataReductionDie}}" placeholder="d4" data-dtype="String" />
+            </div> 
+
+            {{!-- Attack --}}
+            <div class="form-group">
+                <label>{{ localize "MB.Attack" }}</label>
+                <input type="text" name="data.attack.name" value="{{data.attack.name}}" placeholder="None" data-dtype="String" />
+            </div> 
+            <div class="form-group">
+                <label>{{ localize "MB.DamageDie" }}</label>
+                <input type="text" name="data.attack.damageDie" value="{{data.attack.damageDie}}" placeholder="d4" data-dtype="String" />
+            </div>
+            <div class="form-group">
+                <label>{{ localize "MB.Special" }}</label>
+                <input type="text" name="data.special" value="{{data.special}}" placeholder="None" data-dtype="String" />
+            </div>
+
+            {{!-- Bounty --}}
+            <div class="form-group">
+                <label>{{ localize "MB.Bounty" }}</label>
+                <input type="text" name="data.bounty" value="{{data.bounty}}" placeholder="None" data-dtype="String" />
+            </div>
         </div>
     </section>
 </form>
