--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -843,7 +843,6 @@ TODO: figure out if we want a 2-col inventory
   flex-direction: row;
   padding: 5px;
 }
-
 .morkborg.sheet.actor.creature .sheet-header .header-col1 {
   flex: 0 0 100px;
 }
@@ -860,8 +859,19 @@ TODO: figure out if we want a 2-col inventory
 .morkborg.sheet.actor.creature .sheet-header .creature-name input[type="text"] {
   font-family: "Blood Crow", fantasy, serif;
   font-size: 38px;
-  flex: 1;
-  height: 45px;
+  flex: 0 0 45px;
+}
+.morkborg.sheet.actor.creature .sheet-header .altname-row {
+  flex: 0 0 30px;
+}
+.morkborg.sheet.actor.creature
+  .sheet-header
+  .altname-row
+  input[type="text"] {
+  font-family: "Old Cupboard", serif;
+  font-size: 24px;
+  /* TODO: fix div so we don't need margin-left */
+  margin-left: 12px;
 }
 .morkborg.sheet.actor.creature .sheet-header .hitpoints-row {
   flex: 0 0 35px;
