Start styling class sheet.

--- a/templates/item-sheet.html
+++ b/templates/item-sheet.html
@@ -1,5 +1,6 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
 
+    {{!-- Sheet Header --}}
     <header class="sheet-header">
         <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
         <div class="header-fields">
